Fix tabs loading in Shift page. Start developing availabilities related service.

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -46,3 +46,10 @@
   cursor: pointer !important;
 }
 
+.availabilities-container .fc-content{
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
